# alphafold

./: .codespellrc  .dockerignore  .gitignore  AF_monomer_example_script.sh  AF_multimer_example_script.sh  AlphaFold2.ipynb  AlphaPickle.py  COD.md  CONTRIBUTING.md  Dockerfile  FOLDING.md  Makefile  README-chunan.md  README.md  compare-md5sum-twoFolders.sh  compare-md5sum.sh  config.py  conftest.py  pretrained_data_url.csv  pyproject.toml  requirements.txt  run.sh  run_alphafold.py  run_alphafold.sh  run_alphafold_model.py  run_alphafold_msa.py  run_alphafold_test.py  run_feature_cpu.py  run_feature_cpu.sh  run_my_alphafold_multimer.sh  run_my_alphafold_snakemake.sh  setting_up.sh  setup.py  sms-templates.py  tmp.sh
.codeboarding/: AlphaFold Model Core.md  AlphaFold Runner.md  Amber Relaxation Module.md  Core Utilities.md  Data Preprocessing.md  Notebook Utilities.md  TensorFlow Input Pipeline.md  on_boarding.md
.devcontainer/: Dockerfile.runtime  apptainer.runtime.def  create-env-apptainer.sh  create-env-docker.sh  create-env.sh  devcontainer.json
.devcontainer/eve/: Dockerfile  create-env.sh  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codespell.yml  docker-image-build-and-push.yaml  docker-image-build-test.yml  docker-image.yml  lint_python.yml  main.yml  pipeline-1.yaml
afdb/: README.md
alphafold/: __init__.py  run_alphafold.py  version.py
alphafold/afdb/: README.md
alphafold/common/: __init__.py  confidence.py  confidence_test.py  mmcif_metadata.py  (+5 more)
cmds/: README.md  build-af2-image.sh  run-af2m-container.sh  run-af2m-msa.sh  run-af2m-struct.sh  run_msa.sh
docker/: Dockerfile  __init__.py  create_singularity_recipe.sh  openmm.patch  requirements.txt  run_docker.py
docs/: technical_note_v2.3.0.md
notebooks/: AlphaFold.ipynb
patches/: patch_data_params_dir.patch  patch_params_update_dir.patch
scripts/: download_all_data.sh  download_alphafold_params.sh  download_bfd.sh  download_mgnify.sh  download_pdb70.sh  download_pdb_mmcif.sh  download_pdb_seqres.sh  download_small_bfd.sh  download_uniclust30.sh  download_uniprot.sh  download_uniref30.sh  download_uniref90.sh  run_af2_dev.sh  setup_self_hosted_pdb-mmcif_mirror.sh  update_env.sh  update_pdb70.sh  update_pdb_mmcif.sh  update_pdb_seqres.sh
server/: README.md  example.json
singularity/: README.md  Singularity.def  alphafold.singularity  requirements.txt  run_singularity.py
test/: Dockerfile  delete_vm.py  requirements.txt
(+93 files in other folders)
